# foxhunter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1
include/: App.h  resource.h
res/: kill.bat
src/: App.cpp  main.cpp  resource.rc
